[gd_scene load_steps=11 format=3 uid="uid://df8x227c7a8q4"]

[ext_resource type="Script" uid="uid://wt6o27vmhuas" path="res://Code/Scenes/UI/Main/UISlot.gd" id="1_ktjfi"]
[ext_resource type="Texture2D" uid="uid://ct7oa74jhqcwq" path="res://Art/Cards/4 ex Team Magma vs Team Aqua/74.jpg" id="2_m52es"]
[ext_resource type="PackedScene" uid="uid://dp781vdb5kvc7" path="res://Scenes/UI/UIComponents/art_button.tscn" id="3_1osh3"]
[ext_resource type="Shader" uid="uid://chaingl03cnx1" path="res://Shaders/Shine2D.gdshader" id="3_dkwm5"]
[ext_resource type="Texture2D" uid="uid://d3nrajtlwbvgh" path="res://Art/Cards/4 ex Team Magma vs Team Aqua/84.jpg" id="3_pjvm0"]
[ext_resource type="PackedScene" uid="uid://bs3ila6cpt8n1" path="res://Scenes/UI/UIComponents/types.tscn" id="4_nhrrd"]
[ext_resource type="PackedScene" uid="uid://dph43kayde03u" path="res://Scenes/UI/UIComponents/energy_types.tscn" id="7_lj5ts"]
[ext_resource type="PackedScene" uid="uid://04qgb8r1r84v" path="res://Scenes/UI/UIComponents/damage_counter.tscn" id="8_e8fxk"]
[ext_resource type="PackedScene" uid="uid://bcuwyo6u5h2fw" path="res://Scenes/UI/UIComponents/conditions.tscn" id="8_lj5ts"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lj5ts"]
resource_local_to_scene = true
shader = ExtResource("3_dkwm5")
shader_parameter/shine_color = Color(0.98, 0.925, 0.231, 1)
shader_parameter/base_color = Color(0.180736, 0.120593, 0.350483, 1)
shader_parameter/shine_speed = 7.0
shader_parameter/shine_size = 0.07
shader_parameter/shine_bool = false

[node name="BenchPokemon" type="Control"]
layout_mode = 3
anchor_left = 0.001
anchor_right = 0.238
anchor_bottom = 0.226
offset_left = -0.08
offset_right = -0.0400085
offset_bottom = 0.279999
script = ExtResource("1_ktjfi")
active = false
metadata/_edit_lock_ = true

[node name="Main" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 147.0
offset_bottom = 133.0
theme_override_constants/separation = -12
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Main"]
layout_mode = 2
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Name" type="RichTextLabel" parent="Main/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(95, 46)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "Team Magma's
Mightyena"
fit_content = true

[node name="MaxHP" type="RichTextLabel" parent="Main/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(47, 46)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "[u]HP[/u] 200/200"
fit_content = true
horizontal_alignment = 2

[node name="ArtButton" type="CenterContainer" parent="Main"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Main/ArtButton"]
layout_mode = 2

[node name="ArtButton" parent="Main/ArtButton/MarginContainer" instance=ExtResource("3_1osh3")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_lj5ts")
layout_mode = 2

[node name="TrainerAttached" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -17.0
offset_top = 56.0
offset_right = 31.0
offset_bottom = 116.0
mouse_filter = 2
metadata/_edit_group_ = true

[node name="Tool" type="TextureRect" parent="TrainerAttached"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(48, 28)
layout_mode = 2
texture = ExtResource("2_m52es")
expand_mode = 5
stretch_mode = 4

[node name="TM" type="TextureRect" parent="TrainerAttached"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(48, 28)
layout_mode = 2
texture = ExtResource("3_pjvm0")
expand_mode = 5
stretch_mode = 4

[node name="TypeContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = -8.0
offset_top = 32.0
offset_right = 126.0
offset_bottom = 56.0
mouse_filter = 2
metadata/_edit_group_ = true

[node name="Types" parent="TypeContainer" instance=ExtResource("4_nhrrd")]
layout_mode = 2

[node name="Types2" parent="TypeContainer" instance=ExtResource("4_nhrrd")]
visible = false
layout_mode = 2

[node name="Types3" parent="TypeContainer" instance=ExtResource("4_nhrrd")]
visible = false
layout_mode = 2

[node name="Types4" parent="TypeContainer" instance=ExtResource("4_nhrrd")]
visible = false
layout_mode = 2

[node name="Types5" parent="TypeContainer" instance=ExtResource("4_nhrrd")]
visible = false
layout_mode = 2

[node name="Types6" parent="TypeContainer" instance=ExtResource("4_nhrrd")]
visible = false
layout_mode = 2

[node name="EnergyTypes" parent="." instance=ExtResource("7_lj5ts")]
unique_name_in_owner = true
layout_mode = 0
offset_left = -8.0
offset_top = 118.0
offset_right = 212.0
offset_bottom = 142.0
en_count = 6

[node name="Conditions" parent="." instance=ExtResource("8_lj5ts")]
unique_name_in_owner = true
layout_mode = 0
offset_top = 33.0
offset_bottom = 209.0

[node name="DamageCounter" parent="." instance=ExtResource("8_e8fxk")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 152.0
offset_top = 32.0
offset_right = 184.0
offset_bottom = 64.0
